// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignDid should allow signing with full did 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with on-chain DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            Identity with on-chain DID and lots of coins
          </span>
        </div>
      </section>
      <a
        aria-label="Light DID Identity"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
        title="Light DID Identity"
      />
      <a
        aria-label="Identity which has a very very very very long name and might not even fit on the screen"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
        title="Identity which has a very very very very long name and might not even fit on the screen"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="label"
    >
      Request from:
    </p>
    <p
      class="origin"
    >
      https://example.org/foo
    </p>
    <p
      class="label"
      id="plaintext"
    >
      Data to be signed:
    </p>
    <p
      class="plaintextLine"
    >
      <textarea
        aria-labelledby="plaintext"
        class="plaintext"
        readonly=""
      >
        All your base are belong to us
      </textarea>
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="reject"
        type="button"
      >
        Reject
      </button>
      <button
        class="submit"
        type="submit"
      >
        Sign
      </button>
      <output
        class="errorTooltip"
        hidden=""
      >
        You need to upgrade to an on-chain DID first
      </output>
    </p>
  </form>
</div>
`;

exports[`SignDid should render 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with on-chain DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            Light DID Identity
          </span>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
        title="Add Identity"
      />
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
        title="Identity with on-chain DID and lots of coins"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbCB5b3VyIGJhc2UgYXJlIGJlbG9uZyB0byB1cyJ9"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="label"
    >
      Request from:
    </p>
    <p
      class="origin"
    >
      https://example.org/foo
    </p>
    <p
      class="label"
      id="plaintext"
    >
      Data to be signed:
    </p>
    <p
      class="plaintextLine"
    >
      <textarea
        aria-labelledby="plaintext"
        class="plaintext"
        readonly=""
      >
        All your base are belong to us
      </textarea>
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="reject"
        type="button"
      >
        Reject
      </button>
      <button
        class="submit"
        disabled=""
        type="submit"
      >
        Sign
      </button>
      <output
        class="errorTooltip"
      >
        You need to upgrade to an on-chain DID first
      </output>
    </p>
  </form>
</div>
`;
